Fixed horizontal scrolling and optimized page for mobile

--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -1,3 +1,20 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+header{
+  padding-top: 10px;
+  background-color: #f5f5f5;
+  padding-bottom: 10px
+}
+
+#description{
+  padding-top: 10px;
+}
+
+#display{
+  margin-top: -50px;
+}
 .cardish {
   display: inline-block;
 
@@ -23,4 +40,10 @@
 
 footer > p {
   font-size: .3rem;
+}
+
+h1,h2,h3,h4 {
+  font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+	text-rendering: optimizelegibility;
 }
